--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -1,10 +1,11 @@
 {
   "node": true,
   "browser": true,
+  "devel": false,
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
-  "curly": true,
+  "curly": false,
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
@@ -14,10 +15,13 @@
   "quotmark": "single",
   "regexp": true,
   "undef": true,
-  "unused": true,
+  "unused": false,
   "strict": true,
   "trailing": true,
   "smarttabs": true,
+  "boss": false,
+  "eqnull": false,
+  "expr": true,
   "globals": {
     "angular": false
   }
