--- a/client/bower.json
+++ b/client/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bootstrap": "3.2.0",
     "angular-animate": "^1.3.0-rc.1",
+    "angular-resource": "^1.3.0-rc.1",
     "angular-route": "^1.3.0-rc.1",
     "angular": "^1.3.0-rc.1"
   }
