--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,7 @@
       "type": "MIT"
     }
   ],
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "chalk": "^0.4.0",
     "gulp": "^3.8.1",
     "gulp-autoprefixer": "0.0.7",
