--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,9 @@
       "type": "MIT"
     }
   ],
+  "engines": {
+      "node": "~0.10.21"
+  },
   "dependencies": {
     "chalk": "^0.4.0",
     "gulp": "^3.8.1",
