--- a/client/bower.json
+++ b/client/bower.json
@@ -27,6 +27,7 @@
     "angular-resource": "^1.3.0-rc.1",
     "angular-route": "^1.3.0-rc.1",
     "angular-sanitize": "^1.3.0-rc.1",
-    "angular": "^1.3.0-rc.1"
+    "angular": "^1.3.0-rc.1",
+    "angular-ui-map": "~0.5.0"
   }
 }
