--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "gulp-util": "^2.2.17",
     "gulp-watch": "^0.6.6-1",
     "jshint-stylish": "^0.2.0",
+    "proxy-middleware": "^0.11.0",
     "run-sequence": "^0.3.6",
     "stream-combiner": "^0.2.1",
     "through2": "^0.5.1",
